# SawDrawX

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
